# ssh-capsule

./: .gitignore  LICENSE  README.md  pyproject.toml
ssh_capsule/: __init__.py  capsule.py  cli.py  executor.py  modules.py  snapshot.py
ssh_capsule/templates/: dev.yaml
